tests/invalid/luaTruthinessNaN.ts
// @ts-nocheck
if (NaN) {
	console.log("NaN check");
}
